kubernetes-manifests/nats/overlays/supercluster/eu-central-1/remove-primary-control-plane.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: nats-advisory-watcher, namespace: nats}
$patch: delete
