kubernetes-manifests/nats/overlays/supercluster/eu-central-1/scheduling.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: {name: nats, namespace: nats}
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector: {matchLabels: {app.kubernetes.io/name: nats}}
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector: {matchLabels: {app.kubernetes.io/name: nats}}
